# ex-int-tcl-minvfslib

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildTclStatic.cmake
src/: app.c
